maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:20: error: reassignment to val
  cpt=0
     ^PledgeMaze:23: error: reassignment to val
    cpt=cpt+ 1
       ^PledgeMaze:27: error: reassignment to val
    cpt=cpt+1
       ^PledgeMaze:31: error: reassignment to val
    cpt=cpt+1
       ^PledgeMaze:35: error: reassignment to val
  cpt=cpt-1
     ^